--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -1,55 +1,38 @@
 .form {
     .row {
-        margin-right: -5px;
-        margin-left: -5px;
         margin-bottom: 8px;
-        overflow: hidden;
         &:last-child {
-            margin-bottom: 0
+            margin-bottom: 0;
         }
-        .col {
+        .input {
             box-sizing: border-box;
-            float: left;
-            padding-right: 5px;
-            padding-left: 5px;
-            &:first-child {
-                width: 65%;
-            }
-            &:last-child {
-                width: 35%;
-            }
-            .input {
-                box-sizing: border-box;
-                display: block;
-                width: 100%;
-                padding: 8px;
-                color: #495057;
-                background-color: #fff;
-                border: 1px solid #ced4da;
-                border-radius: .25rem;
-            }
-            .button {
-                color: #1c9d79;
-                background-color: #e6fef7;
-                padding: 8px;
-                border: 1px solid#24c89a;
-                border-radius: .25rem;
-                width: 100%;
-                text-transform: capitalize;
-                &:hover {
-                    color: #ff6600;
-                }
+            display: block;
+            width: 100%;
+            padding: 8px;
+            color: #495057;
+            background-color: #fff;
+            border: 1px solid #ced4da;
+            border-radius: .25rem;
+        }
+        .button {
+            color: #1c9d79;
+            background-color: #e6fef7;
+            padding: 8px;
+            border: 1px solid#24c89a;
+            border-radius: .25rem;
+            width: 100%;
+            text-transform: capitalize;
+            &:hover {
+                color: #ff6600;
             }
         }
     }
     .errors {
+        margin-top: 8px;
         color: #d44950;
         font-size: 11px;
         p {
-            margin-bottom: 8px;
-            &:last-child {
-                margin-bottom: 0
-            }
+            margin: 0;
         }
     }
 }
